plugins {
    id("java-library")
    id("net.neoforged.moddev") version "2.0.141"
    id("maven-publish")
}

version = property("mod_version") as String
group = property("mod_group_id") as String

base {
    archivesName = property("mod_id") as String
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

sourceSets.main {
    resources {
        srcDir("src/generated/resources")
        exclude("**/*.bbmodel")
        exclude("src/generated/**/.cache")
    }
}

repositories {
    // Additional repositories if needed
}

neoForge {
    version = property("neo_version") as String

    parchment {
        mappingsVersion = property("parchment_mappings_version") as String
        minecraftVersion = property("parchment_minecraft_version") as String
    }

    runs {
        register("client") {
            type = "client"
            systemProperty("neoforge.enabledGameTestNamespaces", property("mod_id") as String)
        }
        register("server") {
            type = "server"
            programArgument("--nogui")
            systemProperty("neoforge.enabledGameTestNamespaces", property("mod_id") as String)
        }
        register("data") {
            type = "data"
            programArguments.addAll(
                "--mod", property("mod_id") as String,
                "--all",
                "--output", file("src/generated/resources/").absolutePath,
                "--existing", file("src/main/resources/").absolutePath
            )
        }
        configureEach {
            systemProperty("forge.logging.markers", "REGISTRIES")
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        register(property("mod_id") as String) {
            sourceSet(sourceSets.main.get())
        }
    }
}

configurations {
    create("localRuntime")
    named("runtimeClasspath") {
        extendsFrom(named("localRuntime").get())
    }
}

dependencies {
    implementation("org.jetbrains:annotations:26.0.2")
    implementation("org.jsoup:jsoup:1.19.1")
    implementation("org.sejda.imageio:webp-imageio:0.1.6")
    add("additionalRuntimeClasspath", "org.jsoup:jsoup:1.19.1")
    add("additionalRuntimeClasspath", "org.sejda.imageio:webp-imageio:0.1.6")
    testImplementation(platform("org.junit:junit-bom:5.11.4"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    testImplementation("org.jsoup:jsoup:1.19.1")
    testImplementation("org.mockito:mockito-core:5.14.2")
    testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
}

// Make Minecraft classes available to test source set for Mockito-based rendering tests
sourceSets {
    test {
        compileClasspath += sourceSets.main.get().compileClasspath
        runtimeClasspath += sourceSets.main.get().runtimeClasspath
    }
}

val generateModMetadata = tasks.register("generateModMetadata", Sync::class) {
    val replaceProperties = mapOf(
        "minecraft_version" to project.property("minecraft_version"),
        "minecraft_version_range" to project.property("minecraft_version_range"),
        "neo_version" to project.property("neo_version"),
        "loader_version_range" to project.property("loader_version_range"),
        "mod_id" to project.property("mod_id"),
        "mod_name" to project.property("mod_name"),
        "mod_license" to project.property("mod_license"),
        "mod_version" to project.property("mod_version"),
    )
    inputs.properties(replaceProperties)
    from("src/main/templates")
    into(layout.buildDirectory.dir("generated/resources/modMetadata"))
    expand(replaceProperties)
}

sourceSets.main {
    resources.srcDir(layout.buildDirectory.dir("generated/resources/modMetadata"))
}

neoForge.ideSyncTask(generateModMetadata)

tasks.named("processResources") {
    dependsOn(generateModMetadata)
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

tasks.named<Test>("test") {
    useJUnitPlatform()
}

publishing {
    publications {
        create<MavenPublication>("mavenJava") {
            from(components["java"])
        }
    }
    repositories {
        maven {
            url = uri("repo")
        }
    }
}
